# pyls

./: .gitignore  LICENSE  README.md  pyls.py  pyproject.toml  test_pyls.py
pyls/: __init__.py  pyls.py
tests/: test_pyls.py
