title = "pyls"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
version = "0.1.3"
description = "A command-line tool to list contents of a filesystem structure from a JSON file."
authors = [{ name = "Federico Raffoni", email = "federicoraffoni00@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
keywords = ["filesystem", "json", "command-line"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pyls = "pyls:main"

[tool.setuptools]
packages = ["pyls"]
include-package-data = true

[tool.setuptools.package-data]
pyls = ["structure.json"]
